--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/breeze": "^1.23",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "matanyadaev/laravel-eloquent-spatial": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -22,6 +23,9 @@
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
+        "files": [
+            "app/Helpers/SpatialDataHelper.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
