--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     },
     "autoload": {
         "files": [
-            "app/Helpers/SpatialDataHelper.php"
+            "app/Helpers/SpatialDataHelper.php",
+            "app/Helpers/GeneralHelper.php"
         ],
         "psr-4": {
             "App\\": "app/",
