--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "anthonymartin/geo-location": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "^1.23",
         "laravel/framework": "^10.10",
@@ -24,7 +25,6 @@
     },
     "autoload": {
         "files": [
-            "app/Helpers/SpatialDataHelper.php",
             "app/Helpers/GeneralHelper.php"
         ],
         "psr-4": {
